@@ -55,6 +55,17 @@
       </component>
     </version>
   </module>
+  <module name="alleyoop">
+    <version release="gnome-2.2">
+      <component name="alleyoop" dir="alleyoop" group="extras">
+        <podir dir="po"/>
+        <potname name="alleyoop.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="anjuta">
     <version release="gnome-1.4">
       <component name="anjuta" dir="anjuta" group="fifth-toe">
