@@ -1,3 +1,7 @@
+2003-04-23  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added alleyoop.
+
 2003-04-15  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Removed gtranslator at maintainer's
